--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,5 +1,5 @@
 .navbar-container {
-    position: absolute;
+    position: relative;
     background: #494949;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-style: normal;
